# DataPilot

./: MIGRATION_PLAN.md  todo.md
console/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
console/src/: App.tsx  index.css  main.tsx
console/src/components/app/: Container.tsx  DatabaseSidebar.tsx  FileTree.tsx  SearchInput.tsx
console/src/components/ui/: accordion.tsx  dialog.tsx  file-tree.tsx  label.tsx  tree.tsx
console/src/lib/: queries.ts  queryClient.ts
console/src/lib/sdk/: index.ts  sdk.gen.ts  types.gen.ts
console/src/pages/dashboard/: index.tsx  project-table.tsx
console/src/pages/playground/: ConnectionModal.tsx  DatabaseSidebar.tsx  code-area.tsx  index.tsx  result.tsx  store.ts  table.tsx
console/src/pages/playground/hooks/: index.ts  useConnections.ts  useEntities.ts  useSchemas.ts  useTables.ts
console/src/pages/playground/store/: cache.ts  store.ts
console/src/pages/upload/: index.tsx
server/: .env.test  .gitignore  README.md  main.py  pyproject.toml
server/api/: __init__.py  config.py  models.py  utils.py
server/api/database/: db.py  models.py
server/api/routes/: __init__.py  bucket.py  connections.py  entities.py  queries.py
server/commands/: seeder.py
server/tests/: conftest.py  test_bucket.py
server/tests/base/: __init__.py  base_connection_tests.py  base_entity_tests.py
server/tests/postgres/: __init__.py  conftest.py  test_connection.py  test_entity.py  test_query.py
server/tests/sqlite/: __init__.py  conftest.py  test_connection.py  test_entity.py  test_query.py
